--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   carousel_slider: ^3.0.0
+  photo_view: ^0.11.1
 
 
   # The following adds the Cupertino Icons font to your application.
